--- a/src/assets/scss/foundation/_base.scss
+++ b/src/assets/scss/foundation/_base.scss
@@ -1,15 +1,15 @@
 @use "../global/" as *;
 
 :root {
-  --font-base: "Helvetica Neue", arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", meiryo, sans-serif;
+  --font-base: "Josefin Sans", arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", meiryo, sans-serif;
   --color-white: #fff;
   --color-white-rgb: 255 255 255;
   --color-black: #000;
   --color-black-rgb: 0 0 0;
-  --color-base: #f5f5f5;
-  --color-main: #333;
-  --color-accent: #ca2a48;
-  --color-text: var(--color-main);
+  --color-base: var(--color-white);
+  --color-main: #eb51c2;
+  --color-accent: #00b21b;
+  --color-text: #111;
   --color-link: #349bf4;
   --content-width: 1110;
 
@@ -23,7 +23,7 @@
   }
 
   @include mq(lg) {
-    --comp-width: 1336;
+    --comp-width: 1440;
   }
 }
 
@@ -36,12 +36,12 @@ html {
 body {
   box-sizing: border-box;
   min-block-size: 100%;
-  background-color: var(--color-bg);
   color: var(--color-text);
   font-family: var(--font-base);
   -webkit-font-smoothing: antialiased;
-  line-height: 1.6;
+  line-height: 1.7;
   text-rendering: optimizelegibility;
+  font-feature-settings: "palt";
 }
 
 ul {
