--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -1,9 +1,33 @@
 @use "../../global/" as *;
 
 .c-button {
+  appearance: none;
   display: inline-block;
   box-sizing: border-box;
-  padding: 1rem;
+  padding: 0.5rem 1rem;
   border: none;
-  appearance: none;
+  line-height: 1.5;
+  text-align: center;
+}
+
+.c-button:where(.-primary) {
+  width: 100%;
+  padding: rem(20) 20px;
+  transition-property: scale, background-color;
+  transition-duration: 0.1s, 0.3s;
+  transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
+  border-radius: rem(100);
+  background-color: var(--color-main);
+  color: var(--color-white);
+  font-size: rem(13);
+  font-weight: 700;
+  letter-spacing: 0.05em;
+
+  @include hover {
+    --pos-x: 4px;
+    --pos-y: 8px;
+
+    background-color: rgb(var(--color-main-rgb) / 90%);
+    box-shadow: 2px 4px 0 rgb(var(--color-black-rgb) / 16%);
+  }
 }
