--- a/src/assets/scss/object/project/_header.scss
+++ b/src/assets/scss/object/project/_header.scss
@@ -1,26 +1,69 @@
 @use "../../global/" as *;
 
+.p-header {
+  position: sticky;
+  z-index: 1;
+  top: 0;
+  height: var(--height-header);
+  background-color: transparent;
+}
+
 .p-header__inner {
   display: flex;
   align-items: center;
-  justify-content: center;
-  padding-block: rem(20);
+  justify-content: space-between;
+  height: 100%;
+  padding-inline: 20px;
 
   @include mq(md) {
-    padding-block: rem(50);
+    padding-inline: 35px;
+  }
+}
+
+.p-header__title {
+  width: calc(96 / 335 * 100%);
+  height: 100%;
+
+  @include mq(md) {
+    width: calc(180 / 1370 * 100%);
   }
 }
 
 .p-header__logo {
-  margin: 0;
-  line-height: 1;
-}
-
-.p-header__logoLink {
-  display: block;
-  width: 200px;
-}
-
-.p-header__logoImg {
+  display: inline-flex;
+  align-items: center;
   width: 100%;
+  height: 100%;
+
+  img {
+    width: 100%;
+    height: auto;
+  }
+}
+
+.p-header__cta {
+  display: none;
+  margin-left: 8px;
+}
+
+.p-header__ctaButton {
+  padding: rem(9) 20px;
+  font-size: rem(12);
+  letter-spacing: 0;
+
+  @include mq(md) {
+    padding-block: 1em;
+    font-size: rem(14);
+  }
+}
+
+.is-scroll {
+  .p-header {
+    background-color: var(--color-white);
+    box-shadow: 0 3px 6px rgb(var(--color-black-rgb) / 5%);
+  }
+
+  .p-header__action {
+    display: block;
+  }
 }
