faqセクションまで完了

--- a/src/assets/scss/foundation/_base.scss
+++ b/src/assets/scss/foundation/_base.scss
@@ -12,6 +12,7 @@
   --color-accent: #00b21b;
   --color-text: #111;
   --color-link: #349bf4;
+  --color-gray: #ccc;
   --content-width: 1110;
   --height-header: 60px;
 
