--- a/src/assets/scss/layout/_container.scss
+++ b/src/assets/scss/layout/_container.scss
@@ -1,6 +1,6 @@
 @use "../global/" as *;
 
 .l-container {
-  width: min(90%, 1200px);
+  width: min((335 / 375 * 100%), var(--content-width) * 1px);
   margin-inline: auto;
 }
