--- a/src/assets/scss/object/component/_button.scss
+++ b/src/assets/scss/object/component/_button.scss
@@ -12,7 +12,8 @@
 
 .c-button:where(.-primary) {
   width: 100%;
-  padding: rem(20) 20px;
+  max-width: 300px;
+  padding: rem(17) 20px;
   transition-property: scale, background-color;
   transition-duration: 0.1s, 0.3s;
   transition-timing-function: cubic-bezier(0.755, 0.05, 0.855, 0.06);
@@ -23,11 +24,11 @@
   font-weight: 700;
   letter-spacing: 0.05em;
 
-  @include hover {
-    --pos-x: 4px;
-    --pos-y: 8px;
+  @include mq(lg) {
+    max-width: 360px;
+  }
 
+  @include hover {
     background-color: rgb(var(--color-main-rgb) / 90%);
-    box-shadow: 2px 4px 0 rgb(var(--color-black-rgb) / 16%);
   }
 }
