--- a/src/assets/scss/object/component/_title.scss
+++ b/src/assets/scss/object/component/_title.scss
@@ -3,3 +3,28 @@
 .c-title {
   font-weight: 700;
 }
+
+.c-title:where(.-primary) {
+  :lang(en) {
+    display: block;
+    color: inherit;
+    font-size: my-clamp(40, 64, 375, 1440);
+    font-weight: 400;
+    line-height: 1;
+  }
+
+  :lang(ja) {
+    color: var(--color-main);
+    font-size: rem(14);
+
+    @include mq(md) {
+      font-size: rem(20);
+    }
+  }
+
+  // Color
+  // -------------------------
+  &.-white > * {
+    color: var(--color-white);
+  }
+}
