--- a/src/partials/_svg.html
+++ b/src/partials/_svg.html
@@ -1,4 +1,4 @@
-<svg display="none">
+<svg aria-hidden="true" display="none">
   <defs>
     <!-- Wave -->
     <symbol id="wave" viewBox="0 0 375 25">
@@ -8,10 +8,10 @@
       />
     </symbol>
     <!-- Chevron -->
-    <symbol id="chevron" viewBox="0 0 41.88 37">
+    <symbol id="chevron" viewBox="0 0 11.24 7.259">
       <path
-        d="M8.228,15.107l4.125-4.125,4.125,4.125a1.06,1.06,0,1,0,1.5-1.5L13.1,8.728a1.059,1.059,0,0,0-1.5,0l-4.88,4.88a1.059,1.059,0,0,0,0,1.5A1.081,1.081,0,0,0,8.228,15.107Z"
-        transform="translate(8.59 6.58)"
+        d="M4.976,159.761.2,154.983a.84.84,0,0,1,0-1.191L.992,153a.84.84,0,0,1,1.191,0l3.387,3.387L8.957,153a.84.84,0,0,1,1.191,0l.794.794a.84.84,0,0,1,0,1.191l-4.778,4.779a.836.836,0,0,1-1.188,0Z"
+        transform="translate(0.05 -152.75)"
       />
     </symbol>
   </defs>
