JSの処理を追加。完成

--- a/src/assets/scss/global/_mixins.scss
+++ b/src/assets/scss/global/_mixins.scss
@@ -7,11 +7,11 @@
 // -------------------------
 $breakpoints: (
   xs: 0,
-  sm: calc(576 / 16 * 1rem),
-  md: calc(768 / 16 * 1rem),
-  lg: calc(992 / 16 * 1rem),
-  xl: calc(1200 / 16 * 1rem),
-  xxl: calc(1400 / 16 * 1rem),
+  sm: calc(576 / 16 * 1em),
+  md: calc(768 / 16 * 1em),
+  lg: calc(992 / 16 * 1em),
+  xl: calc(1200 / 16 * 1em),
+  xxl: calc(1400 / 16 * 1em),
 ) !default;
 
 @mixin mq($name, $not: false) {
