--- a/src/assets/scss/object/project/_footer.scss
+++ b/src/assets/scss/object/project/_footer.scss
@@ -7,9 +7,17 @@
 .p-footer__toTop {
   --right: calc((100% - (335 / 375 * 100%)) / 2);
 
+  visibility: hidden;
   position: fixed;
+  z-index: 1;
   right: var(--right);
   bottom: 20px;
+  opacity: 0;
+
+  &.is-show {
+    visibility: visible;
+    opacity: 1;
+  }
 }
 
 .p-footer__toTopButton {
@@ -42,8 +50,27 @@
 }
 
 .p-footer__image {
+  overflow-x: hidden;
+  transition: clip-path 0.25s cubic-bezier(0.44, 0.63, 0.2, 0.59) 0.15s;
+  background: var(--color-main);
+  clip-path: inset(0 100% 0 0);
+
   img {
     width: 100%;
+    transition:
+      clip-path 0.25s cubic-bezier(0.44, 0.63, 0.2, 0.59) 0.5s,
+      scale 0.8s cubic-bezier(0.44, 0.63, 0.2, 0.59) 0.5s;
+    clip-path: inset(0 100% 0 0);
+    scale: 1.1;
+  }
+
+  &.is-inview {
+    clip-path: inset(0 0 0 0);
+
+    img {
+      scale: 1;
+      clip-path: inset(0 0 0 0);
+    }
   }
 }
 
@@ -77,7 +104,7 @@
 .p-footer__logo {
   line-height: 1;
 
-  img {
+  :where(img) {
     width: 87px;
 
     @include mq(lg) {
